# InternshipTask

./: CMakeLists.txt  FlightAPI.cpp  FlightAPI.h  README.md  REST_JSON_API.cpp  REST_JSON_API.h  flights.txt  flightsContainer.cpp  flightsContainer.h  jsonFlightParser.cpp  jsonFlightParser.h  main.cpp  run_tests.sh  tests.txt
